# SynDRep

./: .gitignore  LICENSE  README.md  pyproject.toml
Data/Causal_only_pharmacome/: drugs.csv  kg.tsv  kg_labels.tsv
Data/Causal_only_pharmacome/Combinations/: combos_part1.csv
Data/Human_Brain_Pharmacome/: drugs.csv  kg.tsv
Data/Human_Brain_Pharmacome/Combinations/: combos_part2.csv
example_data/: drugs.csv  dummy_combos.csv
src/SynDRep/: __init__.py  __main__.py  cli.py  main.py  main_function.py
src/SynDRep/Combos_prparation/: prepare_combos.py  test.py
src/SynDRep/Drug_data/: graph_data.py  main.py  physichchemical.py
src/SynDRep/Embedding/: ComplEx_config_hpo.json  Embedding.py  HolE_config_hpo.json  Prediction.py  Scoring.py  test.sh
src/SynDRep/ML/: Classify.py  Scoring.py  __init__.py  classify.py  scoring.py  test.py
src/SynDRep/Postprediction/: Pathway_check.py
src/SynDRep/combos_preparation/: __init__.py  prepare_combos.py  test.py
src/SynDRep/drug_data/: __init__.py  graph_data.py  main.py  physicochemical.py
src/SynDRep/embedding/: CompGCN_config_hpo.json  RotatE_config_hpo.json  TransE_config_hpo.json  TransR_config_hpo.json  __init__.py  embedding.py  models_config.py  prediction.py  scoring.py  test.py
src/SynDRep/examples/: all_combos.csv  all_drug_prop.json  combinations_in_kg.csv  drugs.csv  kg_labels.tsv  name_cid_dict.json  pred_dataset_ML.csv  results.txt
src/SynDRep/postprediction/: __init__.py  analysis.py  pathway_check.py
src/SynDRep/test_data/: all_train_test_data.csv  combinations_not_in_kg.csv  has_combination_with_CYPHER.csv  kg_labels.tsv  scratch.ipynb  test_kg.tsv
src/SynDRep/test_data/combos/: sample_combos.csv
