[project]
name = "SynDRep"
version = "0.1.0"
description = "A Knowledge Graph-Enhanced Tool based on Synergistic Partner Prediction for Drug Repurposing"
readme = "README.md"
requires-python = ">=3.7"
keywords = [
    "Bioinformatics",
    "Machine Learning",
    "Prediction Models",
    "Embeddings",
]
license = { file = "LICENSE" }
authors = [
    { name = "Karim Shalaby", email = "karim.shalaby@scai.fraunhofer.de" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "numpy>=2.0.0",
    "click",
    "pandas",
    "scikit-learn",
    "networkx",
    "xgboost",
    "tqdm",
    "scikit-optimize",
    "pykeen",
    "optuna",
    "requests",
    "torch",
    "rdkit",
    "matplotlib"
]

[build-system]
requires = ["setuptools>=42", "wheel", "numpy>=2.0.0", "pybind11>=2.12"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
docs = [
    "sphinx",
    "sphinx-rtd-theme",
    "sphinx-click",
    "sphinx-autodoc-typehints",
]
dev = ["black", "mypy", "bump-my-version", "pandas-stubs","pylint"]

[project.scripts]
"SynDRep" = "SynDRep.cli:main"

[tool.doc8]
max-line-length = 120

[tool.coverage.run]
branch = true
source = "SynDRep"

[tool.coverage.report]
exclude_lines = ["def __repr__", "def __str__"]

[tool.mypy]
ignore_missing_imports = true
strict = true
plugins = ["numpy.typing.mypy_plugin"]
exclude = "docs"